# internal/handler/http/v1/report/handler.go
@@ -44,7 +44,7 @@ func (h *Handler) InitAPI(router *gin.RouterGroup) {
 	reportGroup := router.Group("/report")
 	{
 		reportGroup.POST("/link", h.GetReportLink)
-		reportGroup.GET("/", h.DownloadReport)
+		reportGroup.GET("/download", h.DownloadReport)
 	}
 }
 
@@ -70,7 +70,7 @@ func (h *Handler) GetReportLink(c *gin.Context) {
 		return
 	}
 
-	link := fmt.Sprintf("http://%s:%s/api/v1/report/?key=%s", h.cfg.ReportHost, h.cfg.ReportPort, key)
+	link := fmt.Sprintf("http://%s:%s/api/v1/report/download?key=%s", h.cfg.ReportHost, h.cfg.ReportPort, key)
 
 	c.JSON(http.StatusOK, GetReportLinkResponse{
 		Link: link,
